--- a/dialogs-dark.css
+++ b/dialogs-dark.css
@@ -6,7 +6,7 @@
  * @description
  *     Turns all build-in and some add-on Firefox and Thunderbird dialog windows dark.
  *     Background colors are inspired by the Developer Edition theme.
- *     The style uses inversion filters, so some icons (those in theechildren).
+ *     The style uses inversion filters, so some icons are inverted (those in theechildren).
  *
  *     If you have any issues with this style, please open a ticket at https://github.com/NiklasGollenstede/stylish
  */
