--- a/thunderbird-dark.css
+++ b/thunderbird-dark.css
@@ -44,7 +44,7 @@
     { margin-top: -2px; }
 
     /* exclude window button area */
-    #titlebar-placeholder-on-TabsToolbar-for-captions-buttons
+    #titlebar-placeholder-on-TabsToolbar-for-captions-buttons, #TabsToolbar
     { background: transparent; }
     window[sizemode="maximized"] #titlebar-placeholder-on-TabsToolbar-for-captions-buttons
     { background-image: linear-gradient(180deg, transparent 90%, black 90%); }
