actually fix #13; The inversion of the mail in the composer window can be toggled by moving the window to the top of the screen.

--- a/mozilla-org-inverted.css
+++ b/mozilla-org-inverted.css
@@ -51,7 +51,7 @@
         background-color: #fff0;
     }
 
-    img[src$=".png"]:not(:hover), img[src$=".svg"]:not(foo)
+    img[src$=".png"]:not(:hover):not(.avatar), img[src$=".svg"]:not(foo)
     {
         filter: unset;
     }
