--- a/thunderbird-dark.css
+++ b/thunderbird-dark.css
@@ -44,7 +44,7 @@
     { margin-top: -2px; }
 
     /* exclude window button area */
-    #titlebar-placeholder-on-TabsToolbar-for-captions-buttons, #TabsToolbar
+    #titlebar-placeholder-on-TabsToolbar-for-captions-buttons:not(foo)
     { background: transparent; }
     window[sizemode="maximized"] #titlebar-placeholder-on-TabsToolbar-for-captions-buttons
     { background-image: linear-gradient(180deg, transparent 90%, black 90%); }
@@ -99,7 +99,11 @@
 
     #content-frame /* #headers-box .color-button */
     {
-        /* filter: invert(100%) hue-rotate(180deg); */
+        filter: invert(100%) hue-rotate(180deg);
+    }
+    window[screenY="0"] #content-frame
+    { /* this is a hack. To turn off the inversion on the compose textbox, move the winwo to the very top of the screen */
+        filter: unset;
     }
 
     /* macOS fix */
