--- a/google-inverted.css
+++ b/google-inverted.css
@@ -2,7 +2,7 @@
 
 @-moz-document
 	regexp("^https?://(?:www|translate|scholar)\\.google\\.(com|([a-z]{2}))(\\.[a-z]{2})?(\\/(?!maps).*)?$"),
-	domain(developers.google.com),
+	domain(developers.google.com), domain(console.developers.google.com),
 	domain(developer.chrome.com)
 {
 	:root {
@@ -21,6 +21,7 @@
 	.main-header,
 	#gs_top, /* scholar */
 	main, /* developer.chrome.com */
+	.p6n-vulcan-layout-main, /* console.developer.chrome.com */
 	#top_of_page, /* developer.google.com */
 	#google-container, /* google.com/recaptcha/admin */
 	#volume-main /* www.google.com/patents */
@@ -29,13 +30,13 @@
 		filter: var(--filter-invert);
 	}
 
-	:-moz-any(#main, #searchform, #root, .main-header, #gs_top, main, #top_of_page, #volume-main) img,
-	:-moz-any(#main, #searchform, #root, .main-header, #gs_top, main, #top_of_page, #volume-main) video,
-	:-moz-any(#main, #searchform, #root, .main-header, #gs_top, main, #top_of_page, #volume-main) canvas,
-	:-moz-any(#main, #searchform, #root, .main-header, #gs_top, main, #top_of_page, #volume-main) iframe,
-	:-moz-any(#main, #searchform, #root, .main-header, #gs_top, main, #top_of_page, #volume-main) [style*="background-image"],
-	:-moz-any(#main, #searchform, #root, .main-header, #gs_top, main, #top_of_page, #volume-main) [style*="background:url"],
-	:-moz-any(#main, #searchform, #root, .main-header, #gs_top, main, #top_of_page, #volume-main) [style*="background: url"],
+	:-moz-any(#main, #searchform, #root, .main-header, #gs_top, main, .p6n-vulcan-layout-main, #top_of_page, #volume-main) img,
+	:-moz-any(#main, #searchform, #root, .main-header, #gs_top, main, .p6n-vulcan-layout-main, #top_of_page, #volume-main) video,
+	:-moz-any(#main, #searchform, #root, .main-header, #gs_top, main, .p6n-vulcan-layout-main, #top_of_page, #volume-main) canvas,
+	:-moz-any(#main, #searchform, #root, .main-header, #gs_top, main, .p6n-vulcan-layout-main, #top_of_page, #volume-main) iframe,
+	:-moz-any(#main, #searchform, #root, .main-header, #gs_top, main, .p6n-vulcan-layout-main, #top_of_page, #volume-main) [style*="background-image"],
+	:-moz-any(#main, #searchform, #root, .main-header, #gs_top, main, .p6n-vulcan-layout-main, #top_of_page, #volume-main) [style*="background:url"],
+	:-moz-any(#main, #searchform, #root, .main-header, #gs_top, main, .p6n-vulcan-layout-main, #top_of_page, #volume-main) [style*="background: url"],
 	.irc_bg /* image search preview background */,
 	.gb_3, /* Google-Apps icons */
 	#gs_gb /* old top banner */
